# WFlowLab

./: .clang-format  .gitignore  README.md  WStreamLab.iss  build.bat  startBuild.bat  startTranslations.bat
Contor/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SerialPorts.lib  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  air-density.cpp  cmake_install.cmake  contor.sln  contor.vcxproj  contor.vcxproj.filters  contor_lupdate.vcxproj  contor_lupdate.vcxproj.filters  dialog.cpp  dialog.cpp.orig  dialog.h  dialog.h.orig  dialog.ui  english.qm  english.ts  flow-meter-type.h  helpabout.cpp  helpabout.cpp.orig  helpabout.h  interface.cpp  interface.cpp.orig  interface.h  interface.h.orig  interface.ui  licence.cpp  licence.h  licence.ui  main.cpp  main.cpp.orig  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  (+15 more)
Contor/.lupdate/: contor_project.Debug.cmake  contor_project.MinSizeRel.cmake  contor_project.RelWithDebInfo.cmake  contor_project.Release.cmake  contor_project.json
Contor/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
Contor/contor.dir/Debug/contor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Contor/contor_autogen/EWIEGA46WW/: qrc_resourcescontor.cpp
Contor/contor_autogen/include_Debug/: ui_dialog.h  ui_helpabout.h  ui_licence.h
Contor/contor_autogen/include_Debug/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_helpabout.cpp.d  qrc_resourcescontor_CMAKE_.cpp.orig
Contor/contor_autogen/include_Release/EWIEGA46WW/: qrc_resourcescontor_CMAKE_.cpp
Contor/contor_autogen___/: mocs_compilation_Debug.cpp
Contor/contor_autogen___/include_Debug/: ui_dialog.h.orig  ui_helpabout.h.orig  ui_licence.h.orig  ui_mainwindow.h  ui_mainwindow.h.orig
Contor/contor_autogen___/include_Debug/EWIEGA46WW/: moc_dialog.cpp.orig  moc_helpabout.cpp  moc_helpabout.cpp.orig  moc_licence.cpp  moc_licence.cpp.d  moc_licence.cpp.orig  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_mainwindow.cpp.orig
Contor/translations/: romanian.ts
Contor/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Contor/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Contor/x64/Debug/contor_lrelease/: contor_lrelease.recipe
Contor/x64/Debug/contor_lrelease/contor_lrelease.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  contor_lrelease.lastbuildstate
Contor/x64/Debug/contor_lupdate/: contor_lupdate.recipe
Contor/x64/Debug/contor_lupdate/contor_lupdate.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Contor/x64/Debug/update_translations/: update_translations.recipe
Contor/x64/Debug/update_translations/update_t.8BCF2F46.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  update_translations.lastbuildstate
Contor/x64/Debug/update_translations/update_t.F5805CD4.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  update_translations.lastbuildstate
Contor/x64/Debug/update_translations/update_t.FF049C22.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  update_translations.lastbuildstate
Debug/: ui_interface.h  ui_mainwindow.h  ui_tableBoard.h
Meter/: CMakeLists.txt  air-density.cpp  air-density.h  definitions.h  dialog.cpp  dialog.h  flow-meter-type.h  helpabout.cpp  helpabout.h  helpabout.ui  interface.cpp  interface.h  interface.ui  ledindicator.cpp  ledindicator.h  licence.cpp  licence.h  license.cpp  license.h  license.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  meter.pro  report.cpp  report.h  report.ui  tableBoard.cpp  tableBoard.h  tableBoard.ui  ui_helpabout.h  ui_interface.h  ui_license.h  ui_mainwindow.h  ui_report.h  ui_tableBoard.h  water-density.cpp  (+4 more)
Meter/build-modbus-Qt_6_5_0_mingw_64-Debug/debug/: moc_mainwindow.cpp
Meter/build-modbus-Qt_6_5_0_mingw_64-Debug_/: ui_mainwindow.h
Meter/debug/: moc_helpabout.cpp  moc_interface.cpp  moc_ledindicator.cpp  moc_license.cpp  moc_predefs.h  qrc_qmake_qmake_qm_files.cpp
Meter/gabriel/: main.cpp
Meter/release/: moc_interface.cpp  moc_mainwindow.cpp  moc_tableBoard.cpp  qrc_qmake_qmake_qm_files.cpp
Meter/translations/: meter_en_EN.qm  meter_en_EN.ts  meter_ro_RO.qm  meter_ro_RO.ts
Meter_tmp/: helpabout.cpp  helpabout.ui  ledindicator.cpp  ledindicator.h  main.cpp  report.cpp  report.ui  tableBoard.h
doxygen/: BAP_DOXYGEN_RULES.txt  Doxyfile
meter/: WStreamLab.pro  definitions.h  flow-meter-type.h  helpabout.cpp  helpabout.h  helpabout.ui  images.qrc  interface.cpp  interface.h  interface.ui  license.cpp  (+25 more)
(+643 files in other folders)
